Fix dot alignment, remove top coming-soon, raise right content

--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@ html, body {
 .logo-wrap {
   position: relative;
   display: inline-flex;
-  align-items: flex-start;
+  align-items: baseline;
   line-height: 1;
 }
 
@@ -62,9 +62,7 @@ html, body {
   height: 7vh;
   background: var(--coral);
   border-radius: 50%;
-  margin-top: 12vh;
-  margin-left: -2vh;
-  align-self: flex-start;
+  margin-left: 1.5vh;
   flex-shrink: 0;
 }
 
